--- a/.github/workflows/env-sync.yml
+++ b/.github/workflows/env-sync.yml
@@ -37,15 +37,14 @@ jobs:
     runs-on: "macos-latest"
     steps:
       - uses: actions/checkout@v2
-      - uses: mamba-org/setup-micromamba@v1
+      - uses: conda-incubator/setup-miniconda@v2
         with:
-          micromamba-version: "1.3.1-0"
-          init-shell: >-
-            bash
+          auto-update-conda: true
+          python-version: "3.10"
       - name: Setup Anaconda Client
         shell: bash -l {0}
         run: |
-          micromamba install --yes anaconda-client
+          conda install --yes anaconda-client
       - name: Upload to Anaconda
         shell: bash -l {0}
         env:
