--- a/.github/workflows/env-sync.yml
+++ b/.github/workflows/env-sync.yml
@@ -62,15 +62,14 @@ jobs:
         python-version: ["3.10"]
     steps:
       - uses: actions/checkout@v2
-      - uses: mamba-org/setup-micromamba@v1
+      - uses: conda-incubator/setup-miniconda@v2
         with:
-          micromamba-version: "1.3.1-0"
-          init-shell: >-
-            bash
+          auto-update-conda: true
+          python-version: ${{ matrix.python-version }}
       - name: Install MUSA Env
         shell: bash -l {0}
         run: |
-          micromamba env create pennmusa/musa-550-fall-2023
+          conda env create pennmusa/musa-550-fall-2023
       - name: Test Import
         shell: bash -l {0}
         run: |
