--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,6 @@ channels:
 
 dependencies:
 - altair=5.0.1
-- anaconda-client=1.12.0
 - beautifulsoup4=4.12.2
 - black=23.7.0
 - bokeh=3.2.1
@@ -70,8 +69,10 @@ dependencies:
 - pip:
   - carto2gpd==1.0.12
   - esri2gpd==1.0.13
+  - jupyterlab-quarto==0.1.45
   - jupyter-panel-proxy==0.1.0
   - jupyter-server-proxy==4.0.0
+  - nbgitpuller==1.2.0
   - pygeckodriver==0.33.0
+  - pyprojroot==0.3.0
   - us==3.1.1
-  - webdriver-manager==4.0.0
