--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,6 @@ dependencies:
 - cartopy=0.21.1
 - cenpy=1.0.1
 - contextily=1.3.0
-- dash=2.11.1
 - dask=2023.8.0
 - datashader=0.15.1
 - descartes=1.1.0
@@ -72,6 +71,7 @@ dependencies:
   - jupyterlab-quarto==0.1.45
   - jupyter-panel-proxy==0.1.0
   - jupyter-server-proxy==4.0.0
+  - nbgitpuller==1.2.0
   - pygeckodriver==0.33.0
   - pyprojroot==0.3.0
   - us==3.1.1
