--- a/environment.yml
+++ b/environment.yml
@@ -64,6 +64,8 @@ dependencies:
 - tweepy=4.14.0
 - vega=4.0.0
 - vega_datasets=0.9.0
+- vegafusion=1.4.0
+- vegafusion-python-embed=1.4.0
 - xarray=2023.7.0
 - pip:
   - carto2gpd==1.0.12
