--- a/environment.yml
+++ b/environment.yml
@@ -57,7 +57,8 @@ dependencies:
 - s3fs=2023.6.0
 - scikit-learn=1.3.0
 - seaborn=0.12.2
-- selenium=4.11.2
+- selenium=4.13.0
+- selenium-manager=4.13.0
 - shapely=2.0.1
 - textblob=0.15.3
 - tqdm=4.65.0
