--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
 - cenpy=1.0.1
 - contextily=1.3.0
 - dask=2023.8.0
+- dash=2.11.1
 - datashader=0.15.1
 - descartes=1.1.0
 - earthpy=0.9.4
@@ -49,6 +50,7 @@ dependencies:
 - pyepsg=0.4.0
 - python=3.10.12
 - python-snappy=0.6.1
+- pytorch=2.0.0
 - rasterio=1.3.8
 - rasterstats=0.19.0
 - requests=2.31.0
@@ -62,6 +64,7 @@ dependencies:
 - shapely=2.0.1
 - textblob=0.15.3
 - tqdm=4.65.0
+- transformers=4.31.0
 - vega=4.0.0
 - vega_datasets=0.9.0
 - vegafusion=1.4.0
