--- a/environment.yml
+++ b/environment.yml
@@ -50,7 +50,7 @@ dependencies:
 - pyepsg=0.4.0
 - python=3.10.12
 - python-snappy=0.6.1
-- pytorch=2.0.0
+- pytorch::pytorch=2.0.0
 - rasterio=1.3.8
 - rasterstats=0.19.0
 - requests=2.31.0
