--- a/environment.yml
+++ b/environment.yml
@@ -16,10 +16,11 @@ dependencies:
 - earthpy=0.9.4
 - fastparquet=2023.7.0
 - flask=2.3.2
+- folium=0.14.0
 - geopandas=0.13.2
 - geoviews=1.10.1
 - holoviews=1.17.0
-- hvplot=0.9.0
+- hvplot=0.8.3
 - imageio=2.31.1
 - intake=0.6.6
 - intake-parquet=0.2.3
